Running google-java-formatter on all files.